# code-debug_Asynchronous-trace

./: .gitinore  Makefile  README.md  future_break.py  rust_future_analysis_gdb.json  test_parser.py  test_pollToFuture_gdb.py  test_pollToFuture_with_generics.py  test_pollToFuture_with_generics.sh  test_reqwest_cu.sh  test_search_patterns.sh
docs/: async_backtrace.md  dwarf_analyszer.md  dwarf_analyszer_guide.md  dwarf_analyzer.md  guide.md  test.md  usage.md  初赛文档-Proj158-支持Rust语言的源代码级内核调试工具.md  测试过程 1.md
dwarf_analyzer/: GDB_future_analysis.py  gdb_info_types_output.txt  main.py
dwarf_analyzer/GDB_dwarf_analysis/: djunpack.bat  sha256.sum
dwarf_analyzer/GDB_dwarf_analysis/.pc/: applied-patches
gdb_profiler/: async_flame_gdb.py.save
results/: async_dependencies.json  future_map.json  poll_map.json  rust_future_analysis.json  test1.json  test_async_future_analysis1.json  tokio_test_project.callgraph.dot  traceEvents.json
src/: main.py  requirements.txt
src/core/: __init__.py  callgraph.py  config.py  find_poll_fn.py  init_dwarf_analysis.py
src/tokio/: __init__.py
test_script/: test_dwarf_debug.py  test_dwarf_step2.sh  test_dwarf_step2_extended.sh  test_pollToFuture.py  test_pollToFuture.sh
tests/async-std_test_project/: Cargo.toml
tests/async_future_analysis/: rust_future_analysis.json
tests/comprehensive_async_test/: Cargo.toml
tests/embassy_test/: Cargo.toml  link.x  qemu-runner.sh
tests/embassy_test/.cargo/: config.toml
tests/tokio_test_project/: rust_future_analysis.json
tests/zCore/: async.py
tools/: dot_subgraph.py
(+81 files in other folders)
