[package]
edition = "2021"
name = "embassy-nrf52840-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"
[dependencies]
# 核心修正：我们启用 'executor-thread' 来让 #[embassy_executor::main] 宏正常工作
embassy-cortex-m = { version = "0.1.0", features = ["defmt", "executor-interrupt", "time-driver-systick"] }
embassy-executor = { version = "0.5.0", features = ["defmt", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
# embassy-sync = { version = "0.5.0", features = ["defmt"] }

# NRF 硬件抽象层，并启用时间驱动
# embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote"]}

# 日志和恐慌处理
defmt = "0.3"
defmt-rtt = "0.4"
# defmt-semihosting = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Cortex-M 核心支持库
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

static_cell = "1.0"
[profile.release]
debug = 2
[profile.dev]
opt-level = 0      # 确保无优化，便于调试
debug = true       # 确保包含完整调试信息
panic = "abort"    # 裸机环境推荐
